--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -33,7 +33,7 @@
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
       {% if post.paperurl %}
-        <p class="wordwrap">Download <a href=" {{ post.paperurl }} ">here</a></p>
+        <a href=" {{ post.paperurl }} ">link</a>
       {% endif %}
     </h2>
     
