--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -33,6 +33,7 @@
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
       {% if post.paperurl %}
+        &nbsp;
         <a href=" {{ post.paperurl }} ">link</a>
       {% endif %}
     </h2>
