--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -32,10 +32,7 @@
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
-      {% if post.paperurl %}
-        &nbsp;
-        <a href=" {{ post.paperurl }} ">link</a>
-      {% endif %}
+
     </h2>
     
     {% if post.read_time %}
@@ -54,6 +51,10 @@
     <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
     {% elsif post.excerpt and site.read_more == 'enabled' %}
     <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
+    {% endif %}
+
+    {% if post.paperurl %}
+      <a href=" {{ post.paperurl }} ">Paper</a>
     {% endif %}
 
   </article>
